--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <style>
+      /* 全局样式 */
+      html,body {
+        margin: 0 0;
+        height: 100%;
+      }
+    </style>
   </body>
 </html>
